# mquickjs

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_JS_MODULE_GEN.md  complex_module.js  complex_module_gen.h  example.c  example_stdlib.c  mqjs_stdlib.c  mquickjs.c  mquickjs.h  mquickjs_build.c  mquickjs_build.h  selftest_gc_mark.c  test_module.js
examples/: CMakeLists.txt  example_stdlib  example_stdlib.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/libc/: CMakeLists.txt
src/repl/: CMakeLists.txt  mqjs.c
src/utils/: CMakeLists.txt
tests/: test_builtin.js
tools/: CMakeLists.txt  mqjs_js_module_gen.c
